# sca-toolsuite

./: AUTHORS  BENCHMARKS.txt  CMakeLists.txt  DOCUMENTATION  DOCUMENTATION.txt  FAQ  FAQ.txt  INSTALL  INSTALL.txt  Makefile.am  Makefile.in  README  README.txt  TODO  TODO.txt  configure  configure.ac
data/ca/: asm.txt  circuit.txt  game_of_life.txt  reproduction_m1.txt  rounding_down.txt  tie_breaking.txt
data/ca_by_grid/: circuit.txt  stca.txt
data/grids/: game_of_life.txt
data/grids/circuit/: merger.txt  resettable_join.txt
data/scenes/: scene.txt
data/search/: CMakeLists.txt  README.txt  crossing.txt  crossing_small.txt  fork.txt  join.txt  merge.txt  rsj.txt  simple_line.txt  stca_fork_and_join.txt  stca_rt_irt_a.txt  universal.txt
doc/: Makefile.am  Makefile.in  doxy_config  generate.sh  mainpage.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  sca-toolsuite.pro  test.sh
src/algo/: CMakeLists.txt  Makefile.am  Makefile.in  S  burning_test.cpp  fix.cpp  id  id.cpp  is_recurrent  l  random_throw.cpp  relax.cpp  s  super.cpp  throw
src/ca/: CMakeLists.txt  Makefile.am  Makefile.in  active_cells.cpp  ca.cpp  ca_file  converter.cpp  dead_cells.cpp  dump.cpp  scene.cpp  transf_by_grids.cpp
src/core/: CMakeLists.txt  Makefile.am  Makefile.in  all_equals.cpp  create.cpp  diff2
src/gui_qt/: CMakeLists.txt  CaSelector.cpp  CaSelector.h  DrawArea.cpp  DrawArea.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  StateMachine.cpp  StateMachine.h  gui_qt.pro  labeled_widget.h  main.cpp
src/img/: CMakeLists.txt  transform.cpp
src/io/: CMakeLists.txt  Makefile.am  Makefile.in  avalanches_bin2human.cpp  convert.cpp  field_to_seq.cpp  fmt_tf.cpp  replace.cpp  scat.cpp  seq_to_field.cpp  tik.cpp  to_image  to_ods  to_pdf  to_tga.cpp
src/math/: CMakeLists.txt  Makefile.am  Makefile.in  add.cpp  add2  calc.cpp  comb.cpp  coords  equation.cpp  filter.cpp  sub2
src/res/: CMakeLists.txt  Makefile.am  Makefile.in  asm_basic.h  bitgrid.h  ca.cpp  ca.h  ca_basics.h  ca_convert.h  ca_eqs.h  ca_table.cpp  ca_table.h  disjoint_sets.h  eqs_functions.cpp  eqs_functions.h  eqs_internal.h  equation_solver.cpp  equation_solver.h  general.cpp  general.h  geometry.cpp  geometry.h  graph_io.cpp  graph_io.h  grid.h  image.cpp  image.h  io.cpp  io.h  odometer.h  patch.h  print.h  random.h  rotor_algorithm.h  scc_algo.h  scene.cpp  simulate.cpp  simulate.h  stack_algorithm.h  traits.h  (+1 more)
src/res/ca/: dead_cells.h
src/res/graph/: detail.h  graph.h
src/res/io/: gridfile.cpp  gridfile.h  latex.h  secfile.cpp  secfile.h  serial.h
src/res/utils/: exceptions.h  name_type_map.h  strings.h
src/rotor/: CMakeLists.txt  Makefile.am  Makefile.in  rotor.cpp  xrotor
src/search/: CMakeLists.txt  README.txt  base.cpp  base.h  base_io.cpp  brute_config.h.in  brute_force.cpp  brute_force.h  common_macros.h  dep_graph.h  eval.cpp  greedy.cpp  greedy.h  old_dep_graph.h  results.cpp  results.h  search.cpp  stats.cpp  stats.h  types.h
src/test/: CMakeLists.txt  sca_test.cpp  test.cpp
src/tsa/: CMakeLists.txt  Makefile.am  Makefile.in  edges2tgf.cpp  graph2scctgf.cpp  grid2edges.cpp  grid2tsagrid.cpp  tsa
src/tsasim/: tsarun.cpp
tmp/: grid.txt  twostate.txt
