toolsdir=../../install
AM_CXXFLAGS = "-I../res"
tools_PROGRAMS=relax fix random_throw burning_test
relax_SOURCES=relax.cpp ../res/io.cpp
fix_SOURCES=fix.cpp ../res/io.cpp
random_throw_SOURCES=random_throw.cpp ../res/io.cpp
burning_test_SOURCES=burning_test.cpp ../res/io.cpp

EXTRA_DIST=l s L S throw is_recurrent id
