toolsdir=../../install
AM_CXXFLAGS = "-I../res"
tools_PROGRAMS=add equation calc comb
add_SOURCES=add.cpp ../res/io.cpp
equation_SOURCES=equation.cpp ../res/io.cpp ../res/equation_solver.cpp
comb_SOURCES=comb.cpp ../res/io.cpp
calc_SOURCES=calc.cpp ../res/io.cpp ../res/equation_solver.cpp

EXTRA_DIST=add2 sub2
