toolsdir=../../install
AM_CXXFLAGS = "-I../res"
tools_PROGRAMS=edges2tgf graph2scctgf grid2edges grid2tsagrid
edges2tgf_SOURCES=edges2tgf.cpp ../res/io.cpp
graph2scctgf_SOURCES=graph2scctgf.cpp ../res/io.cpp
grid2edges_SOURCES=grid2edges.cpp ../res/io.cpp
grid2tsagrid_SOURCES=grid2tsagrid.cpp ../res/io.cpp
EXTRA_DIST = tsa
